Fixed bugs
Fixed dragging tab to new window not showing toolbar
Fixed dragging icon onto itself makes it disappear
Added delete button to settings page
Added file size limit to settings custom icon
Started implementing workaround for bugs/changes in Safari under macOS
10.12.4 beta

--- a/FaviconBar.safariextension/css/faviconBar.css
+++ b/FaviconBar.safariextension/css/faviconBar.css
@@ -68,7 +68,7 @@ margin-bottom: 0px;
 
 }
 
-#linkBar.small img:hover {
+#linkBar.small img.hover {
 	padding-left: 4px;
 	padding-right: 2px;	
 	padding-top: 10px;
@@ -76,7 +76,7 @@ margin-bottom: 0px;
 
 }
 
-#linkBar.normal img:hover {
+#linkBar.normal img.hover {
 	padding-left: 6px;
 	padding-right: 4px;	
 	padding-top: 8px;
@@ -84,7 +84,7 @@ margin-bottom: 0px;
 
 }
 
-#linkBar.large img:hover {
+#linkBar.large img.hover {
 	padding-left: 8px;
 	padding-right: 6px;	
 	padding-top: 4px;
